[workspace]
resolver = "2"
members = [
    "crates/pontus-core",
    "crates/pontus-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
# Licence is deliberately unset: the choice (candidate dual MIT/Apache-2.0)
# is recorded as undecided in README.md and is out of scope to fix silently.

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
ipnet = "2"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
socket2 = { version = "0.5", features = ["all"] }
pnet = "0.35"
libc = "0.2"
