[package]
name = "pontus-cli"
description = "Command-line client over pontus-core; the Phase 1 driver (F-005)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
# Forward the Python plugin runner (links libpython, off by default).
default = []
python = ["pontus-plugins/python"]

[dependencies]
pontus-core = { path = "../pontus-core" }
pontus-plugins = { path = "../pontus-plugins" }
clap.workspace = true
ipnet.workspace = true
tokio.workspace = true
chrono.workspace = true
