[package]
name = "pontus-core"
description = "Pontus headless scan engine and asset/observation model (D-001)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite.workspace = true
ipnet.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
socket2.workspace = true
pnet.workspace = true
libc.workspace = true
roxmltree.workspace = true
ureq.workspace = true
x509-parser.workspace = true
