[package]
name = "pontus-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "pontus-daemon"
path = "src/main.rs"

[dependencies]
# The daemon is a thin scheduler: it shells out to the (capability-granted)
# pontus-cli for each rescan (D-008), so it needs no raw-socket privilege and
# does not depend on pontus-core. Keeping it decoupled means scan orchestration
# lives in exactly one place (the CLI / core), not two.
tokio = { workspace = true, features = ["process", "signal"] }
serde = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
