[package]
name = "pontus-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "pontus-daemon"
path = "src/main.rs"

[dependencies]
# Scanning is delegated to the (capability-granted) pontus-cli via shell-out
# (D-008), so the daemon needs no raw-socket privilege. It does link pontus-core
# read-only for the alert path (F-019): after a scheduled scan it opens the store,
# diffs the new scan against the prior one and evaluates alert rules. Privileged
# scanning stays a shell-out; read + diff + rule-match is in-process core (D-001).
pontus-core = { path = "../pontus-core" }
tokio = { workspace = true, features = ["process", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
